20 Apr 2008 - bear

    Upating Copyright year info
    Fixing defects from Google Project page

28 Nov 2007 - bear

    0.8.5.1 release - removed debug code

    0.8.5 release
    bumping version to 0.8.6 in trunk

    Fixing two bugs found by Chandler QA

    Time range of "today 3:30-5pm" was actually causing a traceback.
    Added a new regex to cover this range type and a new test.

    OSAF 11299 https://bugzilla.osafoundation.org/show_bug.cgi?id=11299

    A really embarrassing for a date/time library - was actually *not*
    considering leap years when returning days in a month!
    Added tests for Feb 29th of various known leap years and also added
    a check for the daysInMonth() routine which was created to replace
    the naively simple DaysInMonthList.

    OSAF 11203 https://bugzilla.osafoundation.org/show_bug.cgi?id=11203

12 Jun 2007 - bear

    0.8.4 release
    bumping version to 0.8.5 in trunk


22 Feb 2007 - bear

    Fixed a bug reported via the code.google project page by Alexis where
    parsedatetime was not parsing day suffixes properly.  For example, the
    text "Aug 25th, 2008" would return the year as 2007 - the parser was
    not 'seeing' 2008 as a part of the expression.

    The fix was to enhance one of the "long date" regexes to handle that
    situation but yet not break the current tests - always fun for sure!

    Issue 16 http://code.google.com/p/parsedatetime/issues/detail?id=16


21 Feb 2007 - bear

    Fixed a bug Brian K. (one of the Chandler devs) found when parsing with
    the locale set to fr_FR.  The phrase "same 3 folders" was causing a key
    error inside the parser and it turns out that it's because short weekday
    names in French have a trailing '.' so "sam." was being used in the
    regular expression and the '.' was being treated as a regex symbol and
    not as a period.

    It turned out to be a simple fix - just needed to add some code to run