@@ -1,3 +1,8 @@
 Mike Taylor         mailto://bear@code-bear.com
                     http://code-bear.com
 Darshana Chhajed    mailto://darshana@osafoundation.org
+
+Locale Patches:
+
+    Bernd Zeimetz <bzed@debian.org>
+
